prevent overflow in tutorial window

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -111,6 +111,11 @@ header {
     left: 0;
     right: 0;
 }
+#tutorialText {
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+}
 #nextButton {
     height: 40px;
     width: 80px;
@@ -152,33 +157,33 @@ header {
     width: 50%;
     padding-top: 5px;
 }
-#tutorial > h3,
-#tutorial > h6,
-#tutorial > p {
+#tutorialText > h3,
+#tutorialText > h6,
+#tutorialText > p {
     font-family: 'Arial';
     color: rgb(5, 46, 107);
 }
-#tutorial > h3 {
+#tutorialText > h3 {
     font-size: 28px;
     padding-bottom: 5px;
     margin-top: 30px;
     margin-bottom: 15px;
 }
-#tutorial > h6 {
+#tutorialText > h6 {
     font-size: 20px;
     padding: 5px 20px 5px 20px;
     margin-top: 15px;
     margin-bottom: 15px;
     font-weight: normal;
 }
-#tutorial > p {
+#tutorialText > p {
     font-size: 14px;
     line-height: 1.72222;
     margin: 0 0 15px;
     padding: 5px 20px 5px 20px;
     font-weight: normal;
 }
-#tutorial > ul li {
+#tutorialText > ul li {
     list-style: none;
     padding-bottom: 5px;
     padding-right: 40px;
